I chaged the font, the spacing between the words and the oranges, and issue with the image not fitting on the screen for tablet sized screens

--- a/components/contentComponent.module.css
+++ b/components/contentComponent.module.css
@@ -7,7 +7,7 @@
     padding-right: 16px;
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
     .container{
         flex-direction: row;
         margin-top: 0px;
@@ -27,7 +27,7 @@
     padding-top: 8px;
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
     .smallContainer{
         align-items: flex-start;
         justify-content: left;
@@ -41,7 +41,14 @@
     width: auto;
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
+    .image {
+        height: 260px;
+        width: auto;
+    }
+}
+
+@media (min-width: 925px) {
     .image {
         height: 400px;
         width: auto;
@@ -57,14 +64,14 @@
 .orange {
     height: 32px;
     width: auto;
-    padding-right: 16px; 
+    padding-right: 8px; 
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
     .orange {
         width: auto;
         height: 40px;
-        padding-right: 32px;
+        padding-right: 16px;
     }
 }
 
@@ -74,21 +81,34 @@
     padding-bottom: 8px;
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
     .text {
         font-size: 24px;
     }
 }
 
+.subheading {
+    font-size: 16px;
+    padding-bottom: 8px;
+    font-family: "Helvetica Light";
+    margin: 0px
+}
+
+@media (min-width: 768px) {
+    .subheading {
+        font-size: 24px;
+    }
+}
+
 .heading {
-    font-size: 32px;
+    font-size: 24px;
     margin: 0px;
     padding-bottom: 8px;
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
     .heading {
-        font-size: 40px;
+        font-size: 32px;
     }
 }
 
@@ -97,7 +117,7 @@
     padding-bottom: 24px;
 }
 
-@media (min-width: 780px) {
+@media (min-width: 768px) {
     .contentContainer {
         max-width: 1160px;
         width: 100%;
